# tallow

./: README.md  TODO.md  pyproject.toml
src/tallow/: configurable.py  transforms.py  ttensor.py
