[project]
name = "tallow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pham Quang Hieu", email = "pqhieu1192@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
